# spider2-search

./: README.md  main.py  pyproject.toml
data/: spider2-lite-with-ext-knowledge.jsonl
src/spider2_search/: add_ext_knowledge.py  chunking.py  ingest.py  plotting.py  reranking.py  utils.py  viz_docs.py
